# Prog7

./: CMakeLists.txt  README  benchmark  build.sh  generate_graphs.py  main.c  speed_results.csv  tdmm_test.c  util_best_fit.csv  util_buddy.csv  util_first_fit.csv  util_mixed.csv  util_worst_fit.csv
libtdmm/: tdmm.c  tdmm.h  tdmm_test.c
